# src/api/swagger.json
@@ -163,6 +163,165 @@
         }
       }
     },
+    "/api/Measurements": {
+      "get": {
+        "tags": ["Measurements"],
+        "operationId": "GetMeasurements",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MeasurementItem"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MeasurementItem"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/MeasurementItem"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["Measurements"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MeasurementItem"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MeasurementItem"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/MeasurementItem"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/Measurements/{id}": {
+      "get": {
+        "tags": ["Measurements"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/MeasurementItem"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MeasurementItem"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MeasurementItem"
+                }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["Measurements"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MeasurementItem"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MeasurementItem"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/MeasurementItem"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["Measurements"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/api/Plant": {
       "get": {
         "tags": ["Plant"],
@@ -729,6 +888,60 @@
         },
         "additionalProperties": false
       },
+      "MeasurementItem": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "batchId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "lightLevel": {
+            "enum": ["VeryLow", "Low", "Moderate", "Light", "VeryLight"],
+            "type": "string"
+          },
+          "soilDryness": {
+            "enum": ["VeryWet", "Wet", "Moist", "Dry", "VeryDry"],
+            "type": "string"
+          },
+          "soilPH": {
+            "type": "number",
+            "format": "float"
+          },
+          "healthStatus": {
+            "enum": ["Poor", "Fair", "Good", "VeryGood", "Excellent"],
+            "type": "string"
+          },
+          "growthStage": {
+            "enum": [
+              "Germination",
+              "Seedling",
+              "Vegetative",
+              "Budding",
+              "Flowering",
+              "Fruiting",
+              "Maturity"
+            ],
+            "type": "string"
+          },
+          "temperature": {
+            "type": "number",
+            "format": "float"
+          },
+          "date": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "PlantItem": {
         "type": "object",
         "properties": {
@@ -741,57 +954,85 @@
             "format": "int32",
             "nullable": true
           },
-          "sunPreference": {
-            "enum": ["FullSun", "PartialShade", "FullShade"],
+          "waterCycle": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "pruningCycle": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "fertilizationCycle": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "harvestCycle": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "wateringNotes": {
             "type": "string",
             "nullable": true
           },
-          "waterNeeds": {
-            "enum": ["Low", "Medium", "High"],
+          "fertilizingNotes": {
             "type": "string",
             "nullable": true
           },
-          "soilType": {
-            "enum": ["Loam", "Sand", "Clay", "Silt", "Peat", "Chalk"],
+          "pruningNotes": {
             "type": "string",
             "nullable": true
           },
-          "soilPH": {
-            "enum": ["Acidic", "Neutral", "Alkaline"],
+          "temperatureNotes": {
             "type": "string",
             "nullable": true
           },
-          "pruning": {
-            "enum": ["Light", "Moderate", "Heavy"],
+          "harvestNotes": {
             "type": "string",
             "nullable": true
           },
-          "climateZone": {
-            "enum": [
-              "Arid",
-              "SemiArid",
-              "Mediterranean",
-              "Temperate",
-              "Tropical",
-              "Subtropical"
-            ],
+          "phNotes": {
             "type": "string",
             "nullable": true
           },
-          "plantType": {
-            "enum": ["Tree", "Shrub", "Flower", "Vine", "Herb", "Grass"],
+          "harvestStart": {
             "type": "string",
-            "nullable": true
+            "format": "date-time"
           },
-          "growthRate": {
-            "enum": ["Slow", "Medium", "Fast"],
+          "harvestEnd": {
             "type": "string",
-            "nullable": true
+            "format": "date-time"
           },
-          "fertilizerNeeds": {
-            "enum": ["None", "Low", "Medium", "High"],
+          "pruningStart": {
             "type": "string",
-            "nullable": true
+            "format": "date-time"
+          },
+          "pruningEnd": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "fertilizingStart": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "fertilizingEnd": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "phMin": {
+            "type": "number",
+            "format": "float"
+          },
+          "phMax": {
+            "type": "number",
+            "format": "float"
+          },
+          "temperatureMin": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "temperatureMax": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -800,6 +1041,10 @@
         "type": "object",
         "properties": {
           "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "batchId": {
             "type": "integer",
             "format": "int32"
           },
@@ -826,7 +1071,15 @@
             "type": "string"
           },
           "category": {
-            "enum": ["Work", "Personal", "Other"],
+            "enum": [
+              "Fertilize",
+              "Harvest",
+              "Prune",
+              "Water",
+              "Sow",
+              "Measure",
+              "Other"
+            ],
             "type": "string"
           },
           "description": {
@@ -862,41 +1115,53 @@
             "type": "string",
             "nullable": true
           },
+          "amount": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "databaseId": {
+            "type": "integer",
+            "format": "int32"
+          },
           "location": {
             "type": "string",
             "nullable": true
           },
           "lastWatered": {
             "type": "string",
+            "format": "date-time",
             "nullable": true
+          },
+          "waterCycle": {
+            "type": "integer",
+            "format": "int32"
           },
           "lastFertilized": {
             "type": "string",
+            "format": "date-time",
             "nullable": true
           },
+          "fertilizationCycle": {
+            "type": "integer",
+            "format": "int32"
+          },
           "lastPruned": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "pruneCycle": {
             "type": "string",
             "nullable": true
           },
           "lastHarvested": {
             "type": "string",
+            "format": "date-time",
             "nullable": true
           },
-          "healthStatus": {
-            "enum": ["Poor", "Fair", "Good", "VeryGood", "Excellent"],
-            "type": "string"
-          },
-          "growthStage": {
-            "enum": [
-              "Germination",
-              "Seedling",
-              "Vegetative",
-              "Budding",
-              "Flowering",
-              "Fruiting",
-              "Maturity"
-            ],
-            "type": "string"
+          "harvestCycle": {
+            "type": "string",
+            "nullable": true
           }
         },
         "additionalProperties": false
