# src/core/services/RouterService/RouterService.ts
@@ -16,16 +16,22 @@ class RouterService {
       isDynamic: false,
     },
     { path: '/fieldsPage', label: 'Fields', hidden: false, isDynamic: false },
-    { path: '/tasksPage', label: 'AgriTasks', hidden: false, isDynamic: false },
+    { path: '/tasksPage', label: 'Tasks', hidden: false, isDynamic: false },
+    {
+      path: '/measurements',
+      label: 'Measurements',
+      hidden: false,
+      isDynamic: false,
+    },
     {
       path: '/cropsPage',
-      label: 'Your Crops',
+      label: 'Batches',
       hidden: false,
       isDynamic: false,
     },
     {
       path: '/cropsDatabase',
-      label: 'Crops Database',
+      label: 'Database',
       hidden: false,
       isDynamic: false,
     },
